# finufft

./: .gitignore  CMakeLists.txt  CMakePresets.json  makefile
cmake/: FindMKL.cmake
devel/: make_kernel_weights.py
devel/finufft_jfm_test/: clparams.cpp  clparams.h  finufft_jfm_test_main.cpp  qute.cpp  qute.h
devel/qtpro/: finufft.pro
docs/dev/: interfaces.md  spreader.md  spreader_opt.md
examples/: CMakeLists.txt
include/finufft/: finufft.hpp
matlab/: finufft.mexa64
matlab/comparisons/: comparisons.m
perftest/: CMakeLists.txt  sort_counting_multithreaded.cpp  sort_counting_prototype.cpp  sort_counting_small.cpp  spread_benchmark.cpp  spread_binfullsort_perf.cpp  spread_binsort_perf.cpp  spread_blocked.cpp  spread_full_2d.cpp  spread_gather_perf.cpp  spread_pack_bin.cpp  spread_subproblem_1d_perf.cpp  spread_subproblem_2d_perf.cpp  spread_subproblem_2d_scaling.cpp  spread_subproblem_3d_perf.cpp  spread_subproblem_perf.h  spread_unpack_bin.cpp  transform_benchmark.h  transform_type1.cpp  transform_type1_large.cpp  transform_type1_xlarge.cpp
src/: bit.h  cnufftspread.cpp  cnufftspread.h  cnufftspread_advanced.cpp  cnufftspread_advanced.h  common.cpp  config.h  constants.h  finufft.cpp  finufft.h  finufft1d.cpp  finufft2d.cpp  finufft3d.cpp  ker_horner_avx2.h  memory.cpp  memory.h  mutex_array.h  plan.cpp  plan.h  precomputed_poly_kernel_configs.inl  precomputed_poly_kernel_data.cpp  precomputed_poly_kernel_data.h  precomputed_poly_kernel_data_helper.cpp  spread_kernels.cpp  spread_kernels.h  spreading.h  spreading_default.h  spreadinterp.cpp  tracing.cpp  tracing.h  utils.cpp  utils.h
src/kernels/: dispatch.cpp  dispatch.h  extents.h  fft.h  interpolation.h  sorting.h  spreading.h
src/kernels/avx2/: gather_fold_avx2.cpp  gather_fold_avx2.h  spreading_avx2.cpp  spreading_avx2.h
src/kernels/avx512/: align_split_routines.h  gather_fold_avx512.cpp  gather_fold_avx512.h  gather_fold_impl.h  loop_routines.h  plan.cpp  plan.h  poly_eval_routines.h  sort_bin_counting.cpp  sort_bin_counting.h  spread_1d_avx512_impl.cpp  spread_1d_avx512_impl.h  spread_2d_avx512_impl.cpp  spread_2d_avx512_impl.h  spread_3d_avx512_impl.cpp  spread_3d_avx512_impl.h  spread_avx512.cpp  spread_avx512.h  spread_axv512.h  spread_bin_sort_int.h  spread_bin_sort_int_impl.cpp  spreading_avx512.cpp  spreading_avx512.h
src/kernels/fft/: fftw.cpp
src/kernels/hwy/: fold_rescale.inl.h  gather_fold_hwy.h  gather_fold_hwy_impl.cpp  spread_bin_sort_hwy.h  spread_bin_sort_hwy_impl.cpp
src/kernels/legacy/: interpolation_legacy.cpp  interpolation_legacy.h  plan.cpp  plan.h  spread_bin_sort_legacy.h  spread_kernel.h  spread_kernel_legacy.cpp  spread_legacy.cpp  spread_legacy.h  spread_subproblem_legacy.h  spreading_legacy.h  synchronized_accumulate_legacy.h
src/kernels/reference/: gather_fold_reference.h  plan.cpp  plan.h  sort_bin_counting.cpp  sort_bin_counting.h  sort_bin_counting_impl.h  spread_bin_sort_int.cpp  spread_bin_sort_int.h  spread_bin_sort_reference.cpp  spread_bin_sort_reference.h  spread_blocked.cpp  spread_blocked.h  spread_blocked_impl.h  spread_blocked_st.cpp  spread_blocked_st.h  spread_kernel.cpp  spread_kernel.h  spread_processor_reference.h  spread_reference.h  spread_subproblem_reference.h  spreading_reference.cpp  spreading_reference.h  synchronized_accumulate_reference.cpp  synchronized_accumulate_reference.h
test/: CMakeLists.txt  exact_type1.cpp  finufft1d_test.cpp  finufft1dmany_test.cpp  kernel_test.cpp  nuffttestnd.sh  plan_type1_test.cpp  sort_bin_counting_test.cpp  spread_add_wrapped_subgrid.cpp  spread_bin_sort_int_test.cpp  spread_bin_sort_test.cpp  spread_full_test.cpp  spread_gather_test.cpp  spread_kernel_test.cpp  spread_poly_eval_test.cpp  spread_sorted_integration.cpp  spread_subproblem_test.cpp  spread_subproblem_test_unaligned.cpp  spread_subproblem_test_utils.h  spread_test_utils.h  spreadtestnd.cpp  spreadtestnd.sh  test_utils.cpp  test_utils.h
